<resources>
    <string name="app_name">Pikachess</string>
    <string name="jeelo_world">Jeelo world!</string>
    <string name="play_chess">Play Chess</string>
    <string name="opponent">Opponent</string>
    <string name="player_colour">Play As</string>
    <string name="background">Background</string>
    <string name="computer_level">AI Level</string>
    <string name="my_image_string">Image</string>
    <string name="confirm_move">Confirm</string>
    <string name="load_game">Load Game</string>
    <string name="text_vertical_offset">0.05</string>
    <string-array name="opponents_array">
        <item>Computer</item>
        <item>Human</item>
    </string-array>
    <string-array name="computer_level_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Tricky</item>
    </string-array>
    <string-array name="player_colour_array">
        <item>White</item>
        <item>Black</item>
    </string-array>
    <string-array name="background_array">
        <item>Shine</item>
        <item>Totodile</item>
        <item>Sky</item>
    </string-array>
    <string-array name="load_game_array">
        <item>New Game</item>
        <item>Continue</item>
    </string-array>
    <string name="play_game">(Play Game)</string>
</resources>
