<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pikachess.ChessMenuActivity">

    <Button
        android:id="@+id/goGravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goGravity"
        android:text="@string/play_chess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/load_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_game"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/goGravity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/goGravity"
        app:layout_constraintTop_toBottomOf="@+id/goGravity"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/opponent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opponent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/load_game"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/load_game"
        app:layout_constraintTop_toBottomOf="@+id/load_game"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/player_colour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_colour"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/opponent_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/opponent_text"
        app:layout_constraintTop_toBottomOf="@+id/opponent_text"
        app:layout_constraintVertical_bias="0.05" />

    <Spinner
        android:id="@+id/load_game_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/load_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/load_game"
        app:layout_constraintTop_toTopOf="@+id/load_game"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/opponent_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/opponent_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/opponent_text"
        app:layout_constraintTop_toTopOf="@+id/opponent_text"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/computer_level_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/computer_level"
        app:layout_constraintEnd_toEndOf="@+id/opponent_spinner"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/opponent_spinner"
        app:layout_constraintTop_toTopOf="@+id/computer_level" />

    <Spinner
        android:id="@+id/background_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/opponent_spinner"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/opponent_spinner"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <Spinner
        android:id="@+id/player_colour_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/player_colour_text"
        app:layout_constraintEnd_toEndOf="@+id/opponent_spinner"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/opponent_spinner"
        app:layout_constraintTop_toTopOf="@+id/player_colour_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/computer_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_level"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/player_colour_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/player_colour_text"
        app:layout_constraintTop_toBottomOf="@+id/player_colour_text"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/opponent_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/opponent_text"
        app:layout_constraintTop_toBottomOf="@+id/computer_level"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>